# tf-playwright-stealth

./: .gitignore  .pylintrc  .semgrepignore  .tags.json  .yamllint  CHANGELOG.md  Makefile  README.md  gen_secrets.sh  golden-images.yaml  osv-scanner.toml  pyproject.toml  setup.py
.claude/best-practices/: coding-standards.md
.claude/rules/: load-org-standards.md
.github/: CODEOWNERS
.github/config/: .pre-commit-config-template.yaml
.github/workflows/: code-dependency-scan.yml  code-security-scan.yml  precommits.yml  secrets-scanner.yml  vuln-scanner-pr.yml
examples/: stealth_mode.py
playwright_stealth/: __init__.py  stealth.py
playwright_stealth/core/: __init__.py  _stealth_config.py  stealth_config.py
playwright_stealth/js/: chrome.app.js  chrome.csi.js  chrome.load.times.js  chrome.plugin.js  chrome.runtime.js  generate.magic.arrays.js  iframe.contentWindow.js  media.codecs.js  navigator.hardwareConcurrency.js  navigator.languages.js  navigator.osCpu.js  navigator.permissions.js  navigator.plugins.js  navigator.productSub.js  navigator.userAgent.js  navigator.vendor.js  navigator.webdriver.js  utils.js  webgl.vendor.js  window.outerdimensions.js
playwright_stealth/properties/: __init__.py  _header_properties.py  _navigator_properties.py  _properties.py  _viewport_properties.py  _webgl_properties.py
tests/: configs.py  demo_with_stealth_test.py  test_runner.py  utils.py
tests/e2e/: configs.py  demo_with_stealth_test.py  test_all_scripts.py  test_multiple_scripts.py  test_one_script.py
tests/unit/: header_properties_test.py  navigator_properties_test.py  properties_test.py  viewport_properties_test.py  webgl_properties_test.py
