[tool.poetry]
name = "tf-playwright-stealth"
packages = [{ include = "playwright_stealth" }]
version = "1.1.2"
description = "Makes playwright stealthy like a ninja!"
authors = []
homepage = "https://www.agentql.com/"
repository = "https://github.com/tinyfish-io/tf-playwright-stealth"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1"
fake-http-header = "^0.3.5"

[tool.poetry.group.dev.dependencies]
agentql = "^1.3.0"
pytest = "^8.3.3"
pylint = "^3.2.7"
pytest-mockito = "^0.0.4"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
wrap_length = 100
multi_line_output = 3
include_trailing_comma = true
